# OncoTerrain

./: .gitignore  LICENSE  MANIFEST.in  README.md  Workflow.tiff  pyproject.toml  requirements.txt  setup.py  slurm-figures.sh  slurm.sh
HallmarkPathGMT/: REACTOME_CELL_CYCLE.v2023.2.Hs.gmt  REACTOME_SIGNALING_BY_EGFR_IN_CANCER.v2023.2.Hs.gmt
docs/: docs.md
notebooks/: creating_vectors.ipynb  exploration.ipynb  figure4-cellchat.ipynb
src/OncoTerrain/: OncoTerrain.py
src/TMEGPT/: Graph.py  OncoTerrain.py  preprocessing.py
src/fig-generation/: copyKAT-val.R  creating-vectors.py  figure-1.py  figure-2.py  figure-3.py  figure-4-cellchat.R  figure-4-spatial.py  figure-5.py  tcga-val.R  violin_plot_5D.py
src/oncocli/: OncoTerrain.joblib  OncoTerrain.py  oncocli.py
src/preprocessing/: OncoTerrain.py  main.py  preprocessing.py
vignettes/: single-sample.ipynb
